# song-scrapper

./: .gitignore  README.md  download.py  main.py  out.html  pagalfree_final.csv  pagalfree_songs.csv  pyproject.toml
