[project]
name = "song-scrapperr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml-html-clean>=0.4.3",
    "requests>=2.32.5",
    "requests-html>=0.10.0",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
